...
            defaultMockURLSession.mockDataTaskHandler = { request in
                // Default successful response for trending movies
                let mockMovieJSON = """
                {
                    "page": 1,
                    "results": [
                        { "id": 123, "title": "Mock Movie 1", "poster_path": "/mock1.jpg", "release_date": "2023-01-01", "vote_average": 7.5, "overview": "Overview 1", "media_type": "movie", "original_language": "en", "original_title": "Mock Movie 1", "backdrop_path": "/back1.jpg", "genre_ids": [1], "popularity": 100.0, "video": false, "vote_count": 100 },
                        { "id": 456, "title": "Mock Movie 2", "poster_path": "/mock2.jpg", "release_date": "2023-02-01", "vote_average": 8.0, "overview": "Overview 2", "media_type": "movie", "original_language": "en", "original_title": "Mock Movie 2", "backdrop_path": "/back2.jpg", "genre_ids": [2], "popularity": 200.0, "video": false, "vote_count": 200 }
                    ],
                    "total_pages": 1,
                    "total_results": 2
                }
                """.data(using: .utf8)!
...
